ampliación actividad diccionario