@@ -1,15 +1,18 @@
 import java.util.*;
+import java.util.stream.Collectors;
+
 public class controlador {
     protected int lastContactId = 0;
-    private List<contacto> contacts = new ArrayList<>();
+    private Map<Integer, contacto> contacts = new HashMap<>();
 
     public contacto nuevoContacto(String nombre, String apellido, int telefono, String email) {
         contacto c = new contacto(++lastContactId, nombre, apellido, telefono, email);
-        contacts.add(c);
+        contacts.put(c.getId(), c);
         return c;
     }
-    public contacto actualizarContacto(int id, String nombre, String apellido, int telefono, String email){
-    contacto c = buscarContactoPorId(id);
+
+    public contacto actualizarContacto(int id, String nombre, String apellido, int telefono, String email) {
+        contacto c = contacts.get(id);
         if (c != null) {
             c.setNombre(nombre);
             c.setApellido(apellido);
@@ -18,31 +21,37 @@ public class controlador {
         }
         return c;
     }
-    public boolean borrarContacto(int id) {
-        contacts.removeIf(c->c.getId()==id);
-        return false;
-    }
-    public contacto buscarContactoPorId(int id){
-        for (contacto c : contacts) {
-            if (c.getId() == id) return c;
 
-        }
-        return null;
+    public boolean borrarContacto(int id) {
+        return contacts.remove(id) != null;
     }
+
+    public contacto buscarContactoPorId(int id) {
+        return contacts.get(id);
+    }
+
     public List<contacto> buscarContactoPorNombre(String nombre) {
-        return contacts.stream().filter(c -> c.getNombre().equalsIgnoreCase(nombre)).toList();
+        return contacts.values().stream()
+                .filter(c -> c.getNombre().equalsIgnoreCase(nombre))
+                .collect(Collectors.toList());
     }
+
     public List<contacto> buscarContactoPorApellido(String apellido) {
-        return contacts.stream().filter(c -> c.getApellido().equalsIgnoreCase(apellido)).toList();
+        return contacts.values().stream()
+                .filter(c -> c.getApellido().equalsIgnoreCase(apellido))
+                .collect(Collectors.toList());
     }
 
     public List<contacto> buscarContactoPorTelefono(int telefono) {
-        return contacts.stream()
+        return contacts.values().stream()
                 .filter(c -> c.getTelefono() == telefono)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<contacto> buscarContactoPorEmail(String email) {
-        return contacts.stream().filter(c -> c.getEmail().equalsIgnoreCase(email)).toList();
+        return contacts.values().stream()
+                .filter(c -> c.getEmail().equalsIgnoreCase(email))
+                .collect(Collectors.toList());
     }
 }
+
